# crypto_aggregator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: config.py  core.py
connectors/: base_client.py  base_connector.py  binance.py  config.py
inputs/: base_client.py  binance.py  config.py
model/: account.py  investment.py  job.py  result.py  trading_order.py
netio/: base_output.py  config.py  mqtt_client.py  pulsar_client.py
outputs/: base_output.py  config.py  pulsar_client.py
pulsar/: run.sh
rx/: pulsar_client.py
tests/: test_binance.py
tools/: pulsar_consumer.py
tools/base_client/: client.py  sub_client.py
tools/base_client/models/: job.py
